Move InfluxDB auth into "env" file

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,5 @@
-PGFLUX_DSN=postgresql://postgres:foobar@localhost/postgres
+PGFLUX_POSTGRES_DSN=postgresql://postgres:foobar@localhost/postgres
+PGFLUX_INFLUX_HOST=influxdb-host.name:8086
+PGFLUX_INFLUX_USERNAME=test
+PGFLUX_INFLUX_PASSWORD=sup3rs3cr3t
+PGFLUX_INFLUX_DBNAME=test
