--- a/changelog.in
+++ b/changelog.in
@@ -11,7 +11,7 @@
 
 # version   ; type    ; subject                                                           ; issues  ;i;h;date      ;detail
 #--------------------------------------------------------------------------------------------------------------------------
-0.1.0       ; support ; Initial Release                                                   ;         ; ; ;2019-02-07;
+1.0.0a1     ; support ; Initial Release                                                   ;         ; ; ;2021-10-06
 
 
 # vim: set filetype=txt textwidth=0 :
