Fix loading of environment variables

--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,4 @@ PGFLUX_INFLUX_HOST=influxdb-host.name:8086
 PGFLUX_INFLUX_USERNAME=test
 PGFLUX_INFLUX_PASSWORD=sup3rs3cr3t
 PGFLUX_INFLUX_DBNAME=test
+PGFLUX_INFLUX_USE_SSL=no
