--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
-PGFLUX_POSTGRES_DSN=postgresql://postgres:foobar@localhost/postgres
-PGFLUX_INFLUX_HOST=influxdb-host.name:8086
+PGFLUX_POSTGRES_DSN=postgresql://postgres:mys3cr37passw0rd@localhost/postgres
+PGFLUX_INFLUX_HOST=localhost:8086
 PGFLUX_INFLUX_USERNAME=test
 PGFLUX_INFLUX_PASSWORD=sup3rs3cr3t
-PGFLUX_INFLUX_DBNAME=test
+PGFLUX_INFLUX_DBNAME=postgres_stats
 PGFLUX_INFLUX_USE_SSL=no
