--- a/changelog.in
+++ b/changelog.in
@@ -11,6 +11,7 @@
 
 # version   ; type    ; subject                                                           ; issues  ;i;h;date      ;detail
 #--------------------------------------------------------------------------------------------------------------------------
+1.0.0.post3 ; support ; Update 'installation' section in the docs                         ;         ; ; ;2021-10-20
 1.0.0.post2 ; support ; Fix image links in README                                         ;         ; ; ;2021-10-20
 1.0.0.post1 ; support ; Fix copyright notice in generated docs                            ;         ; ; ;2021-10-20
 1.0.0a0     ; support ; Initial Release                                                   ;         ; ; ;2021-10-20
