--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -15,17 +15,17 @@ on:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.x"]
-
     services:
       postgres:
         image: postgres
         env:
           POSTGRES_PASSWORD: mys3cr37passw0rd
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -45,7 +45,7 @@ jobs:
       - name: Test with pytest
         env:
           PGFLUX_POSTGRES_DSN: >-
-            postgresql://postgres:mys3cr37passw0rd@postgres/postgres"
+            postgresql://postgres:mys3cr37passw0rd@localhost/postgres"
         run: |
           ./env/bin/pytest
 
