--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 ---
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+exclude: "^docs/.*"
 repos:
   - repo: https://github.com/PyCQA/isort
     rev: 5.9.3
