--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         80
     ],
     "files.exclude": {
-        "**/__pycache__/**": true
+        "**/__pycache__/**": true,
+        "**/docs/**": true
     },
     "search.exclude": {
         "**/*.pyc": true
